reactapp_manifests/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  template:
    metadata:
      labels:
        name: client-pod
    spec:
      containers:
        - name: client
          image: dhruvmewada15/multi-docker_client
          ports:
            - containerPort: 3000
          resources:
            requests: 
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
  replicas: 1
  selector:
    matchLabels:
      name: client-pod
