reactapp_manifests/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  template:
    metadata:
      labels:
        name: nginx-pod
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests: 
              cpu: "50m"
              memory: "20Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"   
  replicas: 1    
  selector:
      matchLabels:
        name: nginx-pod
