reactapp_manifests/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  template:
    metadata:
      labels:
        name: postgres-pod
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          resources:
            limits: 
              cpu: "20m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "512Mi"
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
