reactapp_manifests/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  template:
    metadata:
      labels: 
        name: redis-pod
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          resources:
            requests: 
              cpu: "20m"
              memory: "28Mi"
            limits:
              cpu: "40m"
              memory: "56Mi"
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
