reactapp_manifests/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: server-pod
    spec:     
      containers:
        - name: server
          image: dhruvmewada15/multi-docker_api
          ports:
            - containerPort: 5000
          resources:
            limits: 
              cpu: "100m"
              memory: "256Mi"
            requests:
              cpu: "200m"
              memory: "512Mi"
  selector:
    matchLabels:
      name: server-pod
