reactapp_manifests/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  template:  
    metadata:
      labels:
        name: worker-pod
    spec:
      containers:
        - name: worker
          image: dhruvmewada15/multi-docker_worker
          resources:
            requests: 
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
  replicas: 1
  selector:
    matchLabels:
      name: worker-pod
