reactapp_manifests/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    name: server-pod
