reactapp_manifests/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-nw-policy  
spec:
  podSelector:    
    matchExpressions:
      - {key: name, operator: In, values: [postgres-pod, redis-pod]}   
  policyTypes:
  - Ingress  
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: client-pod
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 6379    
  # - from:
  #   - podSelector:
  #       matchLabels:
  #         name: server-pod      
  - from:
    - podSelector:
        matchLabels:
          name: worker-pod
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 6379
